# gsheir.com

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_RAILWAY.md  Dockerfile  Dockerfile.round_processor  Dockerfile.sync_service  Dockerfile.web  Makefile  Procfile  README.md  SECURITY.md  docker-compose.yml  manage.py  pyproject.toml  railway.json  requirements.txt  sandbox.ipynb  setup.sh
game/: admin.py  forms.py  models.py  urls.py  views.py
game/management/commands/: create_sample_data.py  process_round.py  sync_fbr_data.py
game/migrations/: 0001_initial.py  0002_match_is_manually_edited.py
game/services/: fbr_api.py
static/css/: game.css  style.css
templates/: base.html  home.html
templates/about_me/: cv.html  home.html
templates/admin/: index.html
templates/admin/game/match/: edit_match.html  input_result.html  manage_matches.html
templates/blog/: arsenal_corners_part_1.html  arsenal_corners_part_2.html  arsenal_press_part_1.html  arsenal_press_part_2.html  coaching.html  fantasy_football.html  home.html
templates/game/: base.html  blank.html  create_league.html  home.html  join_league.html  league.html  login.html  register.html  selection.html
weuro2025/: asgi.py  settings.py  urls.py  wsgi.py
